      [Mike Caron]
    * "search string", "trim string"[Yuriy]
    * "joystick button" and "joystick axis" [Mike Caron]
    * new built-in logic command not() [James]
    * new math operators "&&", "||", "^^" (and, or and xor respectively). These
      are logical operators, as opposed to the bitwise "and", "or" and "xor"
      operators. [Mike]

  * Unlump.exe
    * Ported to FreeBasic [Mike Caron]
    * Output directory defaults to gamename.rpgdir [James]
    * When run without arguments, tells windows users to
      drag-and-drop [James]

  * Stuff only Developers Will Notice
    * Removal of some QuickBasic-specific code
    * New common.bas for code shared by game and custom
    * New util.bas for code that does not depend on any other part
      of the OHR
    * Some rewritten map wrapping code [Ralph Versteegen]
    * Reformatted NPC data with UDTs [Mike Caron]
    * Hspeak's exit code is 2 if there were warnings [Mike Caron]

July 09 2006 [hasta-la-qb]
  * This is the final version to support a real DOS version (GAME-QB and
    CUSTOMQB) You should be using the Windows or Linux versions already
    anyway.

  * New Features
    * Input string gets 3 new arguments, center, positionx, positiony.
      It also behaves a little different now.(Yuriy)
    * Hspeak.exe now waits for a keypress when finished, which should avoid
      a lot of confusion for new plotscripters who are unfamiliar with
      command-line tools. Also added -k option to supress this new
      behaviour [James Paige]
    * Memory usage of the QB build has been trimmed a little. Requirement
      for game-qb.exe is now 552kb [Ralph Versteegen]

  * Bug Fixes
    * Fixed a few bugs in inputstring, including backspace not working,
      missing length checking and ESC popping up the menu [Yuriy, Ralph]
    * Fixed bug 163, a random crash in the music import screen. [Simon, Mike]
    * Bug 176: "Some files appear as subdirectories in Windows browsers" 
      [Ralph Versteegen]